--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#00aaff</color>
     <color name="colorPrimaryDark">#3F51B5</color>
     <color name="colorAccent">#00aaff</color>
+    <color name="colordarkgray">#aaaaaa</color>
 </resources>
