Finished custom dialog. Set colors and fonts.

--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -167,7 +167,7 @@
                     android:textStyle="normal|bold"
                     android:textSize="14sp"
                     android:gravity="center_vertical|center_horizontal"
-                    android:textColor="@color/colorAccent" />
+                    android:textColor="@color/colorBlack" />
 
                 <TextView
                     android:text="(2-12)"
