--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#00aaff</color>
     <color name="colordarkgray">#aaaaaa</color>
     <color name="colorBlack">#000000</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
