--- a/app/src/main/res/layout/listview_row.xml
+++ b/app/src/main/res/layout/listview_row.xml
@@ -17,7 +17,8 @@
             android:layout_height="30dp"
             android:id="@+id/airline"
             android:layout_weight="1"
-            android:gravity="left|center_vertical" />
+            android:gravity="left|center_vertical"
+            android:textStyle="normal|bold" />
 
         <TextView
             android:text="398 Euro"
@@ -25,7 +26,9 @@
             android:layout_height="match_parent"
             android:id="@+id/price"
             android:layout_weight="1"
-            android:gravity="right|center_vertical" />
+            android:gravity="right|center_vertical"
+            android:textStyle="normal|bold"
+            android:textColor="@color/priceColor" />
     </LinearLayout>
 
     <LinearLayout
@@ -38,7 +41,8 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/outbound_layout">
+            android:id="@+id/outbound_layout"
+            android:layout_weight="1">
 
             <TextView
                 android:text="SKG"
@@ -46,7 +50,10 @@
                 android:layout_height="match_parent"
                 android:id="@+id/outbound_origin"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:textColor="@color/airportsIATA"
+                android:textStyle="normal|bold"
+                android:textAllCaps="false" />
 
             <TextView
                 android:text="16:00"
@@ -54,7 +61,9 @@
                 android:layout_height="match_parent"
                 android:id="@+id/outbound_origin_time"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:textStyle="normal|bold"
+                android:textColor="@color/colorBlack" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -69,7 +78,9 @@
                 android:layout_height="match_parent"
                 android:id="@+id/outbound_destination"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:textStyle="normal|bold"
+                android:textColor="@color/airportsIATA" />
 
             <TextView
                 android:text="16:45"
@@ -77,7 +88,46 @@
                 android:layout_height="match_parent"
                 android:id="@+id/outbound_destination_time"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:textStyle="normal|bold"
+                android:textColor="@color/colorBlack" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/outbound_bottom_layout"
+            android:layout_weight="1">
+
+            <TextView
+                android:text="Θέση : "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/outbound_travel_seat" />
+
+            <TextView
+                android:text="Οικονομική"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/outbound_travel_class"
+                android:layout_weight="1" />
+
+            <TextView
+                android:text="Διαθέσιμες : "
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/outbound_seats"
+                android:textAlignment="textEnd"
+                android:layout_weight="0.25" />
+
+            <TextView
+                android:text="9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/outbound_available"
+                android:layout_weight="0.26"
+                android:textColor="@color/priceColor" />
         </LinearLayout>
 
         <LinearLayout
@@ -92,7 +142,9 @@
                 android:layout_height="match_parent"
                 android:id="@+id/inbound_origin"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:textStyle="normal|bold"
+                android:textColor="@color/airportsIATA" />
 
             <TextView
                 android:text="23:00"
@@ -100,7 +152,9 @@
                 android:layout_height="match_parent"
                 android:id="@+id/inbound_origin_time"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:textStyle="normal|bold"
+                android:textColor="@color/colorBlack" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -115,7 +169,9 @@
                 android:layout_height="match_parent"
                 android:id="@+id/inbound_destination"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:textStyle="normal|bold"
+                android:textColor="@color/airportsIATA" />
 
             <TextView
                 android:text="23:50"
@@ -123,42 +179,48 @@
                 android:layout_height="match_parent"
                 android:id="@+id/inbound_destination_time"
                 android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal" />
+                android:gravity="center_vertical|center_horizontal"
+                android:textStyle="normal|bold"
+                android:textColor="@color/colorBlack" />
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/bottom_layout">
+            android:layout_weight="1"
+            android:id="@+id/inbound_bottom_layout">
 
             <TextView
                 android:text="Θέση : "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/travel_seat" />
+                android:id="@+id/inbound_travel_seat" />
 
             <TextView
-                android:text="Οικονομική"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/travel_class"
-                android:layout_weight="1" />
+                android:text="Οικονομική προνομιακή"
+                android:id="@+id/inbound_travel_class"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content" />
 
             <TextView
                 android:text="Διαθέσιμες : "
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/seats"
+                android:layout_height="wrap_content"
+                android:id="@+id/inbound_seats"
                 android:layout_weight="1"
                 android:textAlignment="textEnd" />
 
             <TextView
-                android:text="9"
+                android:text="13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/available"
-                android:layout_weight="0.36" />
+                android:id="@+id/inbound_available"
+                android:layout_weight="0.62"
+                android:textColor="@color/priceColor" />
         </LinearLayout>
+
     </LinearLayout>
+
 </LinearLayout>
