--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="black_overlay">#66000000</color>
     <color name="airportsIATA">#003cff</color>
     <color name="priceColor">#ff0000</color>
+    <color name="listitem_background">#e7e7e7</color>
 </resources>
