--- a/app/src/main/res/layout/listview_row.xml
+++ b/app/src/main/res/layout/listview_row.xml
@@ -22,25 +22,6 @@
             android:layout_weight="1" />
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:id="@+id/stops"
-            android:text="@string/stops"
-            android:textStyle="normal|bold"
-            android:textAlignment="center"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_weight="0.48" />
-
-        <TextView
-            android:text="0"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/stop_counter"
-            android:textAlignment="viewStart"
-            android:textStyle="normal|bold"
-            android:gravity="center_vertical|center_horizontal" />
-
-        <TextView
             android:text="398 Euro"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -121,17 +102,20 @@
             android:layout_weight="1">
 
             <TextView
-                android:text="Θέση : "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/outbound_travel_seat" />
-
-            <TextView
                 android:text="Οικονομική"
                 android:layout_height="match_parent"
                 android:id="@+id/outbound_travel_class"
-                android:layout_width="200dp"
-                android:layout_weight="0.09" />
+                android:layout_width="160dp" />
+
+            <TextView
+                android:text=" 0"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:id="@+id/out_stop_c"
+                android:textAlignment="viewStart"
+                android:textStyle="normal|bold"
+                android:gravity="center_vertical|center_horizontal"
+                android:layout_weight="0.22" />
 
             <TextView
                 android:text="Διαθέσιμες : "
@@ -211,17 +195,18 @@
             android:layout_weight="1">
 
             <TextView
-                android:text="Θέση : "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/inbound_travel_seat" />
-
-            <TextView
                 android:text="Οικονομική προνομιακή"
                 android:id="@+id/inbound_travel_class"
                 android:layout_height="wrap_content"
-                android:layout_width="200dp"
-                android:layout_weight="1" />
+                android:layout_width="160dp" />
+
+            <TextView
+                android:text=" 0"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/in_stop_c"
+                android:layout_weight="1.05"
+                android:textStyle="normal|bold" />
 
             <TextView
                 android:text="Διαθέσιμες : "
