--- a/app/src/main/res/layout/activity_list_view_item_detail.xml
+++ b/app/src/main/res/layout/activity_list_view_item_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_list_view_item_detail"
     android:layout_width="match_parent"
@@ -10,11 +10,4 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="gr.uom.agelogeo.androidproject.ListViewItemDetail">
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView" />
-</RelativeLayout>
+</ScrollView>
