--- a/app/src/main/res/layout/activity_search_airport.xml
+++ b/app/src/main/res/layout/activity_search_airport.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:focusableInTouchMode="true"
     tools:context="gr.uom.agelogeo.androidproject.SearchAirportActivity">
 
     <LinearLayout
@@ -22,6 +23,14 @@
             android:ems="10"
             android:id="@+id/searchbox"
             android:hint="@string/searchtextforairports" />
+
+        <TextView
+            android:text="@string/nearAirports"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/nearbyTextView"
+            android:textStyle="normal|bold"
+            android:textSize="18sp" />
 
         <ListView
             android:layout_width="match_parent"
