--- a/app/src/main/res/layout/activity_list_view_item_detail.xml
+++ b/app/src/main/res/layout/activity_list_view_item_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_list_view_item_detail"
     android:layout_width="match_parent"
@@ -8,6 +9,267 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="gr.uom.agelogeo.androidproject.ListViewItemDetail">
+    tools:context="gr.uom.agelogeo.androidproject.ListViewItemDetail"
+    android:elevation="0dp">
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/GeneralLayout">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/journeyInfo"
+        android:paddingBottom="@dimen/activity_horizontal_margin">
+
+        <TextView
+            android:text="Θεσσαλονίκη - Αθήνα"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/journeyView"
+            android:textStyle="normal|bold"
+            android:textSize="18sp"
+            android:textColor="@color/airportsIATA" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:text="Συνολική διάρκεια : 2 ώρες"
+                android:layout_width="241dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/journeyDuration"
+                android:textSize="14sp"
+                android:layout_weight="0.69" />
+
+            <TextView
+                android:text="0 Στάσεις"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView3"
+                android:layout_weight="1"
+                android:textAlignment="textEnd" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/departInfo"
+            android:paddingTop="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_horizontal_margin"
+            android:background="@color/lightgray">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/departs_trans"
+                android:id="@+id/imageView2"
+                android:tint="@color/colorAccent" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="315dp"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="20:10 16 Δεκ 2016"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView6"
+                    android:textSize="18sp"
+                    android:textStyle="normal|bold"
+                    android:textColor="@color/colorAccent"
+                    android:paddingLeft="@dimen/activity_vertical_margin" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:text="SKG "
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView5"
+                        android:textAlignment="textStart"
+                        android:paddingLeft="@dimen/activity_vertical_margin"
+                        android:layout_weight="0.10"
+                        android:textSize="18sp"
+                        android:textColor="@color/colorAccent"
+                        android:textStyle="normal|bold" />
+
+                    <TextView
+                        android:text="Makedonia Airport"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView7"
+                        android:layout_weight="0.91"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <TextView
+                    android:text="RyanAir"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView4"
+                    android:paddingLeft="@dimen/activity_vertical_margin"
+                    android:textSize="18sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/middleInfo"
+            android:paddingTop="@dimen/activity_horizontal_margin"
+            android:paddingBottom="@dimen/activity_horizontal_margin"
+            android:background="@color/lightgray">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/bluestar"
+                android:id="@+id/imageView3" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:text="ATH"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView10"
+                        android:paddingLeft="@dimen/activity_vertical_margin"
+                        android:layout_weight="0.20"
+                        android:textStyle="normal|bold"
+                        android:textSize="14sp"
+                        android:textColor="@color/colorAccent" />
+
+                    <TextView
+                        android:text="Eleftherios Venizelos"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView11"
+                        android:layout_weight="1"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <TextView
+                    android:text="Olympic Air"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView8"
+                    android:paddingLeft="@dimen/activity_vertical_margin"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:text="Διάρκεια Αναμονής : 1 ωρα"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView12"
+                    android:paddingLeft="@dimen/activity_vertical_margin"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/arriveInfo"
+            android:paddingBottom="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_horizontal_margin"
+            android:background="@color/lightgray">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/arrives_trans"
+                android:id="@+id/imageView4"
+                android:tint="@color/colorAccent" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="315dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:text="23:50 16 Δεκ 2016"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView15"
+                    android:paddingLeft="@dimen/activity_vertical_margin"
+                    android:textStyle="normal|bold"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorAccent" />
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:text="CHQ"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView14"
+                        android:paddingLeft="@dimen/activity_vertical_margin"
+                        android:textStyle="normal|bold"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="18sp"
+                        android:layout_weight="0.08" />
+
+                    <TextView
+                        android:text="Chania Airport"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView16"
+                        android:layout_weight="1"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <TextView
+                    android:text="Aegean Airlines"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView13"
+                    android:paddingLeft="@dimen/activity_vertical_margin"
+                    android:textSize="18sp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <Button
+            android:text="Κάνε κράτηση"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2"
+            android:paddingRight="@dimen/activity_vertical_margin"
+            android:textAlignment="center"
+            android:layout_gravity="right"
+            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_horizontal_margin" />
+
+    </LinearLayout>
 
 </ScrollView>
