--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="colorBlack">#000000</color>
 
     <color name="black_overlay">#66000000</color>
-    <color name="airportsIATA">#003cff</color>
+    <color name="airportsIATA">#0800ff</color>
     <color name="priceColor">#ff0000</color>
     <color name="listitem_background">#e7e7e7</color>
+    <color name="lightgray">#ededed</color>
 </resources>
