--- a/app/src/main/res/layout/activity_list_view_item_detail.xml
+++ b/app/src/main/res/layout/activity_list_view_item_detail.xml
@@ -123,7 +123,7 @@
                         android:textStyle="normal|bold" />
 
                     <TextView
-                        android:text="Makedonia Airport"
+                        android:text="Airport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/outdPortName"
@@ -388,7 +388,7 @@
                         android:layout_weight="0.08" />
 
                     <TextView
-                        android:text="Chania Airport"
+                        android:text="Airport"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/outaPortName"
@@ -475,7 +475,7 @@
                             android:textStyle="normal|bold" />
 
                         <TextView
-                            android:text="Makedonia Airport"
+                            android:text="Airport"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/indPortName"
@@ -740,7 +740,7 @@
                             android:layout_weight="0.08" />
 
                         <TextView
-                            android:text="Chania Airport"
+                            android:text="Airport"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/inaPortName"
