--- a/app/src/main/res/layout/activity_list_view_item_detail.xml
+++ b/app/src/main/res/layout/activity_list_view_item_detail.xml
@@ -802,7 +802,7 @@
         </LinearLayout>
 
         <Button
-            android:text="Κάνε κράτηση"
+            android:text="@string/clicktobuyString"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/clicktobuy"
